--- a/form_web/index.html
+++ b/form_web/index.html
@@ -21,7 +21,7 @@
     <div class="header">
         <div class="container-main-menu">
             <div class="container">
-                <div class="row">
+                <div class="row-1">
                     <div class="col-0">
                         <a href="https://www.ceara.gov.br/"><img src="logo-governo.svg" alt="Logo do Governo do Ceará"></a>
                         <a href="https://www.instagram.com/eeepmanoelmano/"><img src="logo-mm.svg" alt="Logo da EEEP Manoel Mano"></a>
@@ -47,10 +47,8 @@
                     <fieldset>
                     <legend>Dados Pessoais:</legend>
                     <div class="mb-3">
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="nome completo">
-                    </div>
-                    <div class="mb-3">
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="nome social">
+                        <input type="text" class="form-control" class="col-01" placeholder="nome completo">
+                        <input type="text" class="form-control" class="col-01" placeholder="nome social">
                     </div>
                     <div class="row">
                         <div class="col">
@@ -68,8 +66,13 @@
                         <input type="text" class="form-control" placeholder="estado" aria-label="estado">
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="row">
+                        <div class="col">
                         <input type="text" class="form-control" id="specificSizeInputName" placeholder="cpf: 000.000.000-00" maxlength="11">
+                    </div>
+                    <div class="col">
+                        <input type="text"  placeholder="cep: 000.000.000-00" maxlength="11">
+                    </div>
                     </div>
                     <div class="row">
                         <div class="col">
