--- a/form_web/index.html
+++ b/form_web/index.html
@@ -127,6 +127,75 @@
                 </form>
             </div>
         </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Materia</th>
+                    <th>6°Ano</th>
+                    <th>7°Ano</th>
+                    <th>8°Ano</th>
+                    <th>9°Ano</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Matemática</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Português</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Ciências</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>História</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Geografia</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Inglês</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Artes</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+                <tr>
+                    <td>Ed.fisica</td>
+                    <td><input type="number" name="6°Ano" id=""></td>
+                    <td><input type="number" name="7°Ano" id=""></td>
+                    <td><input type="number" name="8°Ano" id=""></td>
+                    <td><input type="number" name="9°Ano" id=""></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     
         <footer><img src="./ondas-governo-rodape.png" alt=""></footer>
