--- a/form_web/index.html
+++ b/form_web/index.html
@@ -11,6 +11,7 @@
     <meta name="google-site-verification" content="ezTnfxOAOeXB6FaEOsqR0fcf63u74YI3CQX8biM0w7I" />
     <!-- Script para as Mascaras --> 
     <script src="js/MaskInput.js"></script>
+    <script src="js/MaskNotas.js"></script>
     <!-- Favicon EEEP Manoel Mano -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/logoMM.png">
    
@@ -140,10 +141,10 @@
             <tbody>
                 <tr>
                     <td>Matemática</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°Ano" id="6ano" maxlength="3"></td>
+                    <td><input type="number" name="7°Ano" id="7ano"></td>
+                    <td><input type="number" name="8°Ano" id="8ano"></td>
+                    <td><input type="number" name="9°Ano" id="9ano"></td>
                 </tr>
                 <tr>
                     <td>Português</td>
@@ -197,6 +198,7 @@
             </tbody>
         </table>
     </div>
+ 
     
         <footer><img src="./ondas-governo-rodape.png" alt=""></footer>
         
