--- a/form_web/index.html
+++ b/form_web/index.html
@@ -12,6 +12,7 @@
     <!-- Script para as Mascaras --> 
     <script src="js/MaskInput.js"></script>
     <script src="js/MaskNotas.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Favicon EEEP Manoel Mano -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/logoMM.png">
    
@@ -139,61 +140,65 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+         <tr>
                     <td>Matemática</td>
-                    <td><input type="number" name="6°Ano" id="6ano" maxlength="3"></td>
-                    <td><input type="number" name="7°Ano" id="7ano"></td>
-                    <td><input type="number" name="8°Ano" id="8ano"></td>
-                    <td><input type="number" name="9°Ano" id="9ano"></td>
+                    <td> <input id="field" type="text" maxlength="5" pattern="([0-9]{3})"/> </td>
+                    <td><input type="number" name="7°AnoMatematica" id="7ano"></td>
+                    <td><input type="number" name="8°AnoMatematica" id="8ano"></td>
+                    <td><input type="number" name="9°AnoMatematica" id="9ano"></td>
                 </tr>
+
+          
+
+
                 <tr>
                     <td>Português</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="text" name="6°AnoPortugues" id=""></td>
+                    <td><input type="number" name="7°AnoPortugues" id=""></td>
+                    <td><input type="number" name="8°AnoPortugues" id=""></td>
+                    <td><input type="number" name="9°AnoPortugues" id=""></td>
                 </tr>
                 <tr>
                     <td>Ciências</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoCiencias" id=""></td>
+                    <td><input type="number" name="7°AnoCiencias" id=""></td>
+                    <td><input type="number" name="8°AnoCiencias" id=""></td>
+                    <td><input type="number" name="9°AnoCiencias" id=""></td>
                 </tr>
                 <tr>
                     <td>História</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoHistoria" id=""></td>
+                    <td><input type="number" name="7°AnoHistoria" id=""></td>
+                    <td><input type="number" name="8°AnoHistoria" id=""></td>
+                    <td><input type="number" name="9°AnoHistoria" id=""></td>
                 </tr>
                 <tr>
                     <td>Geografia</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoGeografia" id=""></td>
+                    <td><input type="number" name="7°AnoGeografia" id=""></td>
+                    <td><input type="number" name="8°AnoGeografia" id=""></td>
+                    <td><input type="number" name="9°AnoGeografia" id=""></td>
                 </tr>
                 <tr>
                     <td>Inglês</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoIngles" id=""></td>
+                    <td><input type="number" name="7°AnoIngles" id=""></td>
+                    <td><input type="number" name="8°AnoIngles" id=""></td>
+                    <td><input type="number" name="9°AnoIngles" id=""></td>
                 </tr>
                 <tr>
                     <td>Artes</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoArtes" id=""></td>
+                    <td><input type="number" name="7°AnoArtes" id=""></td>
+                    <td><input type="number" name="8°AnoArtes" id=""></td>
+                    <td><input type="number" name="9°AnoArtes" id=""></td>
                 </tr>
                 <tr>
                     <td>Ed.fisica</td>
-                    <td><input type="number" name="6°Ano" id=""></td>
-                    <td><input type="number" name="7°Ano" id=""></td>
-                    <td><input type="number" name="8°Ano" id=""></td>
-                    <td><input type="number" name="9°Ano" id=""></td>
+                    <td><input type="number" name="6°AnoEdFisica" id=""></td>
+                    <td><input type="number" name="7°AnoEdFisica" id=""></td>
+                    <td><input type="number" name="8°AnoEdFisica" id=""></td>
+                    <td><input type="number" name="9°AnoEdFisica" id=""></td>
                 </tr>
             </tbody>
         </table>
