--- a/form_web/index.html
+++ b/form_web/index.html
@@ -142,7 +142,12 @@
             <tbody>
          <tr>
                     <td>Matemática</td>
-                    <td> <input id="field" type="text" maxlength="5" pattern="([0-9]{3})"/> </td>
+
+                    <!-- segue essa xereca ae, zé bct <3 -->
+                    <td> <input id="num" type="number" onkeypress="return somenteNumeros(event)"  name="6AnoMatematica" id="6ano" required> </td>
+                          
+
+
                     <td><input type="number" name="7°AnoMatematica" id="7ano"></td>
                     <td><input type="number" name="8°AnoMatematica" id="8ano"></td>
                     <td><input type="number" name="9°AnoMatematica" id="9ano"></td>
