Admitindo virgulas de forma MAJESTOSA

--- a/form_web/index.html
+++ b/form_web/index.html
@@ -144,7 +144,7 @@
                     <td>Matemática</td>
 
                     <!-- segue essa xereca ae, zé bct <3 -->
-                    <td> <input id="num" type="number" onkeypress="return somenteNumeros(event)"  name="6AnoMatematica" id="6ano" required> </td>
+                    <td> <input id="num" type="number"  onkeypress="return somenteNumeros(event)" pattern="[0-9] + ([,\.][0-9]+)?" name="6AnoMatematica" id="6ano" required> </td>
                           
 
 
