--- a/InicioWeb/index.html
+++ b/InicioWeb/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EEEP Manoel Mano | Login</title>
-    <link rel="stylesheet" href="/Tab_web_Edital-main/trabWeb/style.css">
+    <link rel="stylesheet" href="/InicioWeb/style.css">
     <link rel="stylesheet" href="btn-style.css">
 
 </head>
@@ -31,7 +31,7 @@
             <div class="formulario">
                 <form method="post" action="">
                     <div class="botoes">
-                        <button class="btn"> <img src="./assets/icon.svg" alt=""> <br> CADASTRO DE ALUNOS</button>
+                        <button class="btn"> <img src="./assets/icon.svg" href="/FormWeb/form.html"target="_blank"> <br> CADASTRO DE ALUNOS</button>
                         <button class="btn" id="sla"> <img src="./assets/icon2.svg" alt="" height="139px"> <br> GERAR RELATÓRIO</button>
                         <button class="btn"> <img src="./assets/icon3.svg" alt=""> <br>  ALUNOS CADASTRADOS</button>
                      </div>
